# chat-app

./: Cargo.toml  Readme.md
client/: Cargo.toml
client/src/: client.rs  main.rs
integration/: Cargo.toml
integration/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  room.rs  server.rs
utils/: Cargo.toml
utils/src/: message.rs
