[workspace]
resolver = "2"

members = [ 
    "client", 
    "integration", 
    "server",
    "utils"
]

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
dashmap = "6.1.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

utils = {path = "./utils"}
