[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
futures = {workspace = true}
utils = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
clap = {workspace = true}